--- a/Rb.BookClassifier.Common/packages.config
+++ b/Rb.BookClassifier.Common/packages.config
@@ -4,4 +4,5 @@
   <package id="AForge.Genetic" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Neuro" version="2.2.5" targetFramework="net45" />
+  <package id="EPPlus" version="4.0.3" targetFramework="net45" />
 </packages>
