--- a/Rb.TestSetLinkUtility/Rb.TestSetLinkUtility.csproj
+++ b/Rb.TestSetLinkUtility/Rb.TestSetLinkUtility.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DDE1440-32F7-4BF8-A53C-D2790CCE71DB}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{1B3D5C42-4AFA-4BF4-ACA3-8F5B584F6E9E}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rb.BookClassifier.Common</RootNamespace>
-    <AssemblyName>Rb.BookClassifier.Common</AssemblyName>
+    <RootNamespace>Rb.TestSetLinkUtility</RootNamespace>
+    <AssemblyName>Rb.TestSetLinkUtility</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,24 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AForge">
-      <HintPath>..\packages\AForge.2.2.5\lib\AForge.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Genetic">
-      <HintPath>..\packages\AForge.Genetic.2.2.5\lib\AForge.Genetic.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Math">
-      <HintPath>..\packages\AForge.Math.2.2.5\lib\AForge.Math.dll</HintPath>
-    </Reference>
-    <Reference Include="AForge.Neuro">
-      <HintPath>..\packages\AForge.Neuro.2.2.5\lib\AForge.Neuro.dll</HintPath>
-    </Reference>
     <Reference Include="EPPlus, Version=4.0.3.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
       <HintPath>..\packages\EPPlus.4.0.3\lib\net20\EPPlus.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,46 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Book\ITestBook.cs" />
-    <Compile Include="Book\ITestBookRanges.cs" />
-    <Compile Include="Book\TestBookRangesBase.cs" />
-    <Compile Include="Book\TestBookVectorizer.cs" />
-    <Compile Include="Classifier\ClassifierBase.cs" />
-    <Compile Include="IVectorizer.cs" />
-    <Compile Include="Neural\ITestCase.cs" />
-    <Compile Include="Neural\ITestCaseFactory.cs" />
-    <Compile Include="Neural\LearningResult.cs" />
-    <Compile Include="Neural\Settings\LearningSettings.cs" />
-    <Compile Include="Neural\Network.cs" />
-    <Compile Include="Neural\Settings\NetworkSize.cs" />
-    <Compile Include="Neural\Settings\StopConditions.cs" />
-    <Compile Include="Neural\Settings\StopType.cs" />
-    <Compile Include="Neural\Book\BookTestCase.cs" />
-    <Compile Include="Neural\Snippet\SnippetTestCase.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reader\ITestSetFactory.cs" />
-    <Compile Include="Reader\TestSetFactory.cs" />
-    <Compile Include="Reader\TestSetReader.cs" />
-    <Compile Include="Reader\ITestSetReader.cs" />
-    <Compile Include="Snippet\ISnippet.cs" />
-    <Compile Include="Snippet\ISnippetData.cs" />
-    <Compile Include="Snippet\ISnippetRanges.cs" />
-    <Compile Include="Snippet\Levinstein.cs" />
-    <Compile Include="Snippet\SnippetRangesBase.cs" />
-    <Compile Include="Snippet\SnippetVectorizer.cs" />
-    <Compile Include="TestSet\ITestSetItem.cs" />
-    <Compile Include="TestSet\TestSetItem.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Rb.Common\Rb.Common.csproj">
-      <Project>{100059E8-CCC0-4A2F-9092-3DE9AA9CACB3}</Project>
-      <Name>Rb.Common</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
